--- a/partyanalyst/trunk/src/main/webapp/styles/landingPage/landingPage.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/landingPage/landingPage.css
@@ -707,7 +707,7 @@ input.input_text
 
 #floatingDiv_absolute_close
 {
-	background-image:url("../../images/icons/homePage_new/red_bg.jpg");
+	background-image:url("../../images/icons/homePage_new/red_bg.jpeg");
 	color:#FFFFFF;
 	font-weight:bold;
 	font-size:10px;
@@ -1332,7 +1332,7 @@ text-decoration:none;
 .ui-state-hover
 {
 	color:#FFFFFF;
-	background-image:url('../../images/icons/homePage_new/accordianHeader_selected.jpg');
+	background-image:url('../../images/icons/homePage_new/accordianHeader_selected.jpeg');
 	font-weight:bold;
 }
 
