Modified by Swathi

--- a/partyanalyst/trunk/src/main/webapp/styles/constituencyManagement/constituencyManagement.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/constituencyManagement/constituencyManagement.css
@@ -5,7 +5,7 @@
 {
 	padding:10px;
 	margin-bottom:10px;
-	background-image:url("../../images/icons/constituencyManagement/pageheader.jpg");
+	background-image:url("../../images/icons/constituencyManagement/pageheader.jpeg");
 	background-repeat:no-repeat;
 	height:200px;
 	text-align:left;	
