--- a/partyanalyst/trunk/src/main/webapp/styles/connectPeople/connectPeople.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/connectPeople/connectPeople.css
@@ -276,7 +276,9 @@
 #reasonsCountTable th
 {
 	padding:5px;
-	color:#2B4158;
+	color:#DF0101;
+	font-family:verdana;
+	font-size:12px;
 }
 
 #reasonsCountTable td
@@ -421,11 +423,12 @@ div#constituencyRightContentOuter a:hover
 .postedDiv_dataInfo_head
 {
 	border-bottom:1px solid #E8E5DE;
-	color:#413821;
-	font-size:13px;
+	color:#0C67AC;
+	font-size:12px;
 	font-weight:bold;
 	margin-bottom:5px;
 	padding-bottom:5px;
+	font-family:verdana;
 }
 
 .postedDiv_dataInfo_table th
