Connect People In District Page UI Changes - sai

--- a/partyanalyst/trunk/src/main/webapp/styles/districtPage/districtPage.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/districtPage/districtPage.css
@@ -483,8 +483,10 @@
 .errorStr
 {
 	color:#584D47;
-	font-size:12px;
+	font-size:14px;
 	padding:5px;
+	font-family:verdana;
+
 }
 
 .allConnectPeople_Head_content
