uploaded By Mohan

--- a/partyanalyst/trunk/src/main/webapp/styles/landingPage/landingPage.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/landingPage/landingPage.css
@@ -835,7 +835,7 @@ input.input_text
 
 .homePageContentWidget_head_center_span
 {
-	color: #4588B6;
+	color: #FFFFFF;
     font-size: 18px;
     font-weight: bold;
     position: relative;
