--- a/partyanalyst/trunk/src/main/webapp/styles/landingPage/landingPage.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/landingPage/landingPage.css
@@ -1535,7 +1535,7 @@ text-decoration:none;
 }
 
 /* Quick Request Styles */
-#quickRequestTextbox {
+.quickRequestTextbox {
    
 	float: right;
     margin-bottom: 15px;
