Media Coverage Link - Sai

--- a/partyanalyst/trunk/src/main/webapp/styles/landingPage/landingPage.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/landingPage/landingPage.css
@@ -1553,3 +1553,13 @@ background-color:#C7CFD2;
 		 margin-left:11px;
 		 
 }
+
+.scrollDataStyle
+{
+  text-decoration:none;
+  margin-left:5px;
+  font-size:11px;
+  color:#4B74C6;
+  font-weight:bold;
+
+}
