--- a/partyanalyst/trunk/src/main/webapp/styles/connectPeople/connectPeople.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/connectPeople/connectPeople.css
@@ -50,6 +50,7 @@
 	height:715px;
 	border:1px solid #808080;
 	-moz-border-radius:10px 10px 10px 10px;
+	overflow-y:auto;
 }
 
 #connectPeople_messages_center .yui-nav
@@ -416,8 +417,8 @@ div#constituencyRightContentOuter a:hover
 .postedDiv_dataInfo_main
 {
 	border:1px solid #D0CCC4;
-	margin:10px 0;
-	padding:5px;
+	margin:15px 0;
+	padding:10px;
 }
 
 .postedDiv_dataInfo_head
@@ -441,7 +442,7 @@ div#constituencyRightContentOuter a:hover
 .postedDiv_dataInfo_table td
 {
 	padding:5px;
-	text-align:left;
+	text-align:justify;
 	color:#273241;
 }
 .linkStyle
