--- a/partyanalyst/trunk/src/main/webapp/styles/cadreManagement/cadreManagement.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/cadreManagement/cadreManagement.css
@@ -157,7 +157,7 @@
 	#cadreStrengthAreasDiv
 	{
 		text-align:right;
-		margin-right:10px;
+		padding-top:37px;/*new*/
 	}
 	#regionLevelCadreDivHead
 	{
