--- a/partyanalyst/trunk/src/main/webapp/styles/candidatePage/candidatePage.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/candidatePage/candidatePage.css
@@ -428,5 +428,9 @@ legend
 	margin-right:5px;
 }*/
 
-
+.candDetailsStyle {
+    color: #4B74C6;
+    font-weight: bold;
+    padding-left: 12px;
+}
 
