Exit Polls -- kamalakar

--- a/partyanalyst/trunk/src/main/webapp/styles/districtPage/districtPage.css
+++ b/partyanalyst/trunk/src/main/webapp/styles/districtPage/districtPage.css
@@ -527,3 +527,9 @@
 	font-weight:bold;
 	cursor:pointer;
 }
+
+.playerInnerBox_gsvb .player_gsvb {
+height:300px;
+padding-right:87px;
+width:471px;
+}
